| Summary: | ASTERISK-25394: pbx: Incorrect device and presence state when changing hint details | ||||
| Reporter: | Joshua C. Colp (jcolp) | Labels: | |||
| Date Opened: | 2015-09-16 08:19:08 | Date Closed: | 2015-09-22 05:33:34 | ||
| Priority: | Major | Regression? | No | ||
| Status: | Closed/Complete | Components: | Core/PBX | ||
| Versions: | 11.19.0 13.5.0 | Frequency of Occurrence | |||
| Related Issues: |
| ||||
| Environment: | Attachments: | ||||
| Description: | It is possible during startup for a hint to have an incorrect initial device and presence state. This is caused by a hint having its extension information changed without being removed. Doing so does not update the device or presence state, causing the state of the previous extension to be preserved. This state will exist until a new state change occurs. | ||||
| Comments: | |||||